--- a/index.html
+++ b/index.html
@@ -3531,7 +3531,7 @@
             <ul class="social-link">
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.facebook.com/people/Chandan-Kumar/pfbid02cpomYpfwh64iDLXr3iZstZSSWaRMbHadm1CpWyXAwPYvjVdP8e6LbLzfteBsicX7l/?ref=ig_profile_ac" class="footer-nav-link">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
               </li>
@@ -3543,13 +3543,13 @@
               </li>
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.linkedin.com/in/chandankumar23/" class="footer-nav-link">
                   <ion-icon name="logo-linkedin"></ion-icon>
                 </a>
               </li>
 
               <li class="footer-nav-item">
-                <a href="#" class="footer-nav-link">
+                <a href="https://www.instagram.com/chanduu9113/" class="footer-nav-link">
                   <ion-icon name="logo-instagram"></ion-icon>
                 </a>
               </li>
@@ -3570,7 +3570,7 @@
         <img src="./assets/images/payment.png" alt="payment method" class="payment-img">
 
         <p class="copyright">
-          Copyright &copy; <a href="#">Anon</a> all rights reserved.
+          Copyright &copy; <a href="#">Chandan Kumar</a> all rights reserved.
         </p>
 
       </div>
